Replaced -XX:+UseCGroupMemoryLimitForHeap with -XX:+UseContainerSupport